--- a/index.html
+++ b/index.html
@@ -78,8 +78,7 @@
             <div class="info">
               <h1>Portfolio</h1>
               <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Error cupiditate esse cum dolores, exercitationem quibusdam vel blanditiis
-                temporibus itaque natus.
+                Portfolio this is my current portfolio website for showing my top projects and information about me. It is made using HTML/CSS/JS.
               </p>
 
               <div class="technologies-container">
@@ -90,18 +89,17 @@
 
               <div class="btn-container">
                 <a href="#github" target="_blank" rel="noopener noreferrer">Code</a>
-                <a href="#preview" target="_blank" rel="noopener noreferrer">Preview</a>
+                <a href="https://mailar.ml" target="_blank" rel="noopener noreferrer">Preview</a>
               </div>
             </div>
-            <img src="assets/img/project-picture.jpg" alt="project-picture" width="615" />
+            <img src="assets/img/portfolio-img.png" alt="project-picture" width="615" />
           </div>
 
           <div class="card">
             <div class="info">
-              <h1>To Do List</h1>
+              <h1>Todo List</h1>
               <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Error cupiditate esse cum dolores, exercitationem quibusdam vel blanditiis
-                temporibus itaque natus.
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis debitis ullam, officiis iure aperiam dicta dolorem facere vitae mollitia assumenda?
               </p>
 
               <div class="technologies-container">
@@ -111,11 +109,11 @@
               </div>
 
               <div class="btn-container">
-                <a href="#github" target="_blank" rel="noopener noreferrer">Code</a>
-                <a href="#preview" target="_blank" rel="noopener noreferrer">Preview</a>
+                <a href="https://github.com/devmailar/MovieLand" target="_blank" rel="noopener noreferrer">Code</a>
+                <a href="https://movieapp-project.netlify.app/" target="_blank" rel="noopener noreferrer">Preview</a>
               </div>
             </div>
-            <img src="assets/img/project-picture.jpg" alt="project-picture" width="615" />
+            <img src="assets/img/portfolio-img.png" alt="project-picture" width="615" />
           </div>
 
           <div class="card">
@@ -133,7 +131,7 @@
               </div>
 
               <div class="btn-container">
-                <a href="#github" target="_blank" rel="noopener noreferrer">Code</a>
+                <a href="https://github.com/devmailar/MovieLand" target="_blank" rel="noopener noreferrer">Code</a>
                 <a href="https://movieapp-project.netlify.app/" target="_blank" rel="noopener noreferrer">Preview</a>
               </div>
             </div>
