--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <ul>
             <li><a href="#">Home</a></li>
             <li><a href="#01">About</a></li>
-            <li><a href="#03">Projects</a></li>
+            <li><a href="#03">Work</a></li>
             <li><a href="#04">Contact</a></li>
           </ul>
           <!-- <div class="mobile-icon">
