--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <h1>Mailar.</h1>
           </a>
           <ul>
-            <li><a href="#">Home</a></li>
+            <li><a href="">Home</a></li>
             <li><a href="#01">About</a></li>
             <li><a href="#03">Work</a></li>
             <li><a href="#04">Contact</a></li>
