--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="container">
       <header>
         <nav>
-          <a href="#">
+          <a href="">
             <h1>Mailar.</h1>
           </a>
           <ul>
