--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 <a href="https://movieapp-project.netlify.app/" target="_blank" rel="noopener noreferrer">Preview</a>
               </div>
             </div>
-            <img src="assets/img/portfolio-img.png" alt="project-picture" width="615" />
+            <img src="assets/img/todo-img.png" alt="project-picture" width="615" />
           </div>
 
           <div class="card">
