--- a/index.html
+++ b/index.html
@@ -69,14 +69,14 @@
 
         <article class="work">
           <div class="text" id="03">
-            <h2>My Work</h2>
+            <h2>My <span>Work</span></h2>
           </div>
 
           <div class="card">
             <div class="info">
               <h1>Portfolio</h1>
               <p>
-                Portfolio this is my current portfolio website for showing my top projects and information about me. It is made using HTML/CSS/JS.
+                Portfolio - this is my current portfolio website for showing my top projects and information about me. It is made using HTML/SCSS/JS.
               </p>
 
               <div class="technologies-container">
@@ -90,7 +90,7 @@
                 <a href="https://mailar.ml" target="_blank" rel="noopener noreferrer">Preview</a>
               </div>
             </div>
-            <img src="assets/img/portfolio-img.png" alt="project-picture" width="615" />
+            <img src="assets/img/portfolio-img.png" alt="project-picture" width="" />
           </div>
 
           <div class="card">
@@ -111,7 +111,7 @@
                 <a href="https://movieapp-project.netlify.app/" target="_blank" rel="noopener noreferrer">Preview</a>
               </div>
             </div>
-            <img src="assets/img/todo-img.png" alt="project-picture" width="615" />
+            <img src="assets/img/todo-img.png" alt="project-picture" width="" />
           </div>
 
           <div class="card">
@@ -133,7 +133,7 @@
                 <a href="https://movieapp-project.netlify.app/" target="_blank" rel="noopener noreferrer">Preview</a>
               </div>
             </div>
-            <img src="assets/img/movie-img.jpg" alt="project-picture" width="615" />
+            <img src="assets/img/movie-img.jpg" alt="project-picture" width="" />
           </div>
         </article>
 
