--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </h1>
 
             <div class="btn-container">
-              <a href="cv.html" class="material-bubble" rel="noreferrer"> Resume </a>
+              <a href="assets/leo_koivunen_cv.pdf" class="material-bubble" rel="noreferrer"> Resume </a>
               <a href="#03" class="material-bubble" rel="noreferrer"> Work </a>
             </div>
           </div>
