--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             <form action="">
               <div class="form-container">
                 <h3>Name:</h3>
-                <input type="text" class="name" name="firstname" placeholder="Mailar <" required />
+                <input type="text" class="name" name="firstname" placeholder="" required />
                 <h3>Email:</h3>
                 <input type="text" class="email" name="email" placeholder="firstname@example.com" required />
                 <h3>Subject:</h3>
