--- a/index.html
+++ b/index.html
@@ -96,8 +96,7 @@
             <div class="info">
               <h1>Todo List</h1>
               <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis debitis ullam, officiis iure aperiam dicta dolorem facere vitae
-                mollitia assumenda?
+                Todo List is a simple list of tasks that you can add to your project structure. Then you can remove, edit or mark them completed when you get them done.
               </p>
 
               <div class="technologies-container">
@@ -159,164 +158,6 @@
       </section>
     </div>
 
-    <!-- <div class="main-alignment">
-        <header>
-          <div class="wrapper">
-            <div class="main">
-              <h1>
-                Hey! I am <span>Front-end</span> <span>developer</span> and
-                <span>designer</span> ...
-              </h1>
-              <div class="btn-container">
-                <a href="cv.html" class="material-bubble" rel="noreferrer">
-                  <i class="fas fa-download"></i>Resume
-                </a>
-                <a href="#03" class="material-bubble" rel="noreferrer">
-                  <i class="fas fa-code-branch"></i>Projects
-                </a>
-              </div>
-            </div>
-            <div class="about" id="02">
-              <div class="margin">
-                <h2>
-                  <div>Ab</div>
-                  out <span> Me</span>
-                </h2>
-                <p>
-                  I am a Front-end web developer who is currently studying
-                  software development in a vocational school.
-                  <br />
-                  <br />
-                  My passion is to create web applications and turn them into
-                  something great that looks nice and simple.
-                  <br />
-
-                  <i class="fab fa-js"></i>
-                  <i class="fab fa-react"></i>
-                  <i class="fab fa-node-js"></i>
-                  <i class="fab fa-sass"></i>
-                </p>
-              </div>
-            </div>
-            <div class="projects" id="03">
-              <div class="margin">
-                <h1>Recent <span>Work</span></h1>
-
-          
-
-                <div class="card">
-                  <div class="info">
-                    <h1>To Do List</h1>
-                    <p>
-                      Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                      Error cupiditate esse cum dolores, exercitationem
-                      quibusdam vel blanditiis temporibus itaque natus.
-                    </p>
-
-                    <div class="technologies-container">
-                      <i class="fab fa-html5"></i>
-                      <i class="fab fa-js"></i>
-                      <i class="fab fa-sass"></i>
-                    </div>
-
-                    <div class="btn-container">
-                      <a
-                        href="#github"
-                        target="_blank"
-                        rel="noopener noreferrer"
-                        >Code</a
-                      >
-                      <a
-                        href="#preview"
-                        target="_blank"
-                        rel="noopener noreferrer"
-                        >Preview</a
-                      >
-                    </div>
-                  </div>
-                  <img
-                    src="assets/img/project-picture.jpg"
-                    alt="project-picture"
-                    width="615"
-                  />
-                </div>
-
-                <div class="card">
-                  <div class="info">
-                    <h1>MovieLand</h1>
-                    <p>
-                      MovieLand is a bit like a website where you can see
-                      information and ratings for the latest movies. The project
-                      uses the themoviedb.org API.
-                    </p>
-
-                    <div class="technologies-container">
-                      <i class="fab fa-html5"></i>
-                      <i class="fab fa-js"></i>
-                      <i class="fab fa-sass"></i>
-                    </div>
-
-                    <div class="btn-container">
-                      <a
-                        href="#github"
-                        target="_blank"
-                        rel="noopener noreferrer"
-                        >Code</a
-                      >
-                      <a
-                        href="#preview"
-                        target="_blank"
-                        rel="noopener noreferrer"
-                        >Preview</a
-                      >
-                    </div>
-                  </div>
-                  <img
-                    src="assets/img/project-picture.jpg"
-                    alt="project-picture"
-                    width="615"
-                  />
-                </div>
-              </div>
-            </div>
-            <div class="contact" id="04">
-              <div class="margin">
-                <h1>Contact <span>Form</span></h1>
-                <div class="container">
-                  <form>
-                    <label for="name">Name</label>
-                    <input
-                      type="text"
-                      id="name"
-                      name="name"
-                      placeholder="Name or email or discord ?"
-                    />
-
-                    <label for="subject">Subject</label>
-                    <input
-                      type="text"
-                      id="subject"
-                      name="subject"
-                      placeholder="Type subject ex: feedback, job, etc."
-                    />
-
-                    <label for="message">Message</label>
-                    <textarea
-                      id="message"
-                      name="message"
-                      placeholder="Write your message.."
-                      style="height: 200px"
-                    ></textarea>
-
-                    <button onclick="sendMessage()">Submit</button>
-                    <script src="assets/js/webhook.js"></script>
-                  </form>
-                </div>
-              </div>
-            </div>
-          </div>
-        </header>
-      </div> -->
     <script type="module" src="assets/js/index.js"></script>
   </body>
 </html>
