--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
               </div>
 
               <div class="btn-container">
-                <a href="#github" target="_blank" rel="noopener noreferrer">Code</a>
+                <a href="https://github.com/devmailar/portfolio" target="_blank" rel="noopener noreferrer">Code</a>
                 <a href="https://mailar.ml" target="_blank" rel="noopener noreferrer">Preview</a>
               </div>
             </div>
@@ -106,8 +106,8 @@
               </div>
 
               <div class="btn-container">
-                <a href="https://github.com/devmailar/MovieLand" target="_blank" rel="noopener noreferrer">Code</a>
-                <a href="https://movieapp-project.netlify.app/" target="_blank" rel="noopener noreferrer">Preview</a>
+                <a href="https://github.com/devmailar/Better-Todo-list" target="_blank" rel="noopener noreferrer">Code</a>
+                <a href="#todo" target="_blank" rel="noopener noreferrer">Preview</a>
               </div>
             </div>
             <img src="assets/img/todo-img.png" alt="project-picture" width="" />
