new changes and contact form script

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </h1>
 
             <div class="btn-container">
-              <a href="assets/leo_koivunen_cv.pdf" class="material-bubble" target="_blank" rel="noreferrer"> Resume </a>
+              <a href="assets/pdf/leo_koivunen_cv.pdf" class="material-bubble" target="_blank" rel="noreferrer"> Resume </a>
               <a href="#03" class="material-bubble" rel="noreferrer"> Work </a>
             </div>
           </div>
@@ -142,22 +142,20 @@
             <form action="">
               <div class="form-container">
                 <h3>Name:</h3>
-                <input type="text" class="name" name="firstname" placeholder="" required />
+                <input type="text" class="name" name="firstname" placeholder="Please enter your name" required />
                 <h3>Email:</h3>
                 <input type="text" class="email" name="email" placeholder="firstname@example.com" required />
                 <h3>Subject:</h3>
-                <input type="text" class="subject" name="subject" placeholder="feedback, job offer, etc." required />
+                <input type="text" class="subject" name="subject" placeholder="feedback, job offer, any." required />
                 <h3>Message:</h3>
                 <textarea type="text" class="message" name="message" placeholder="Hello world!" required></textarea><br>
                 <input type="button" name="submit" value="submit" onclick="sendMessage()">
-                <script src="assets/js/webhook.js"></script>
               </div>
             </form>
           </div>
         </footer>
       </section>
     </div>
-
-    <script type="module" src="assets/js/index.js"></script>
+    <script src="assets/js/ver987.js"></script>
   </body>
 </html>
