--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <title>Mailar</title>
     <link rel="stylesheet" href="assets/css/index.css" />
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Frank+Ruhl+Libre&display=swap" rel="stylesheet" />
+    <link rel="shortcut icon" type="image/jpg" href="assets/img/favicon.png" />
   </head>
   <body>
     <div class="container">
