--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
               </div>
 
               <div class="btn-container">
-                <a href="https://github.com/devmailar/Better-Todo-list" target="_blank" rel="noopener noreferrer">Code</a>
-                <a href="#todo" target="_blank" rel="noopener noreferrer">Preview</a>
+                <a href="https://github.com/devmailar/todo-app" target="_blank" rel="noopener noreferrer">Code</a>
+                <a href="https://todo-app-mailar.netlify.app/" target="_blank" rel="noopener noreferrer">Preview</a>
               </div>
             </div>
             <img src="assets/img/todo-img.png" alt="project-picture" width="" />
