--- a/index.html
+++ b/index.html
@@ -91,6 +91,28 @@
             <img src="assets/img/portfolio-img.png" alt="project-picture" width="" />
           </div>
 
+          
+          <div class="card">
+            <div class="info">
+              <h1>Weather Tracker</h1>
+              <p>
+                Simple weather tracker for tracking weather and events on the web. It includes weather API and functionality for tracking weather.
+              </p>
+
+              <div class="technologies-container">
+                <i class="fab fa-html5"></i>
+                <i class="fab fa-js"></i>
+                <i class="fab fa-sass"></i>
+              </div>
+
+              <div class="btn-container">
+                <a href="https://github.com/devmailar/weather-tracker" target="_blank" rel="noopener noreferrer">Code</a>
+                <a href="https://weather-trackerr.netlify.app/" target="_blank" rel="noopener noreferrer">Preview</a>
+              </div>
+            </div>
+            <img src="assets/img/todo-img.png" alt="project-picture" width="" />
+          </div>
+
           <div class="card">
             <div class="info">
               <h1>Todo List</h1>
