Add picture of proejct to work section

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 <a href="https://weather-trackerr.netlify.app/" target="_blank" rel="noopener noreferrer">Preview</a>
               </div>
             </div>
-            <img src="assets/img/todo-img.png" alt="project-picture" width="" />
+            <img src="assets/img/weather-picture.png" alt="project-picture" width="" />
           </div>
 
           <div class="card">
