--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@
         <aside class="about">
           <div class="text" id="01">
             <h2>
-              <div>Ab</div>
-              out Me
+              About <span>Me</span>
             </h2>
             <p>
               I am a Front-end web developer who is currently studying software development in a vocational school.
