--- a/index.html
+++ b/index.html
@@ -85,7 +85,9 @@
                 <a href="https://mailar.ml" target="_blank" rel="noopener noreferrer">Preview</a>
               </div>
             </div>
-            <img src="assets/img/portfolio-img.png" alt="project-picture" width="" />
+            <div class="img">
+              <img src="assets/img/portfolio-img.png" alt="project-picture" width="" />
+            </div>
           </div>
 
           <div class="card">
@@ -106,7 +108,9 @@
                 <a href="https://weather-trackerr.netlify.app/" target="_blank" rel="noopener noreferrer">Preview</a>
               </div>
             </div>
-            <img src="assets/img/weather-picture.png" alt="project-picture" width="" />
+            <div class="img">
+              <img src="assets/img/weather-picture.png" alt="project-picture" width="" />
+            </div>
           </div>
 
           <div class="card">
@@ -128,7 +132,9 @@
                 <a href="https://todo-app-mailar.netlify.app/" target="_blank" rel="noopener noreferrer">Preview</a>
               </div>
             </div>
-            <img src="assets/img/todo-img.png" alt="project-picture" width="" />
+            <div class="img">
+              <img src="assets/img/todo-img.png" alt="project-picture" width="" />
+            </div>
           </div>
 
           <div class="card">
@@ -150,11 +156,16 @@
                 <a href="https://movieapp-project.netlify.app/" target="_blank" rel="noopener noreferrer">Preview</a>
               </div>
             </div>
-            <img src="assets/img/movie-img.jpg" alt="project-picture" width="" />
+            <div class="img">
+              <img src="assets/img/movie-img.jpg" alt="project-picture" width="" />
+            </div>
           </div>
         </article>
 
         <footer class="contact">
+          <div class="text" id="04">
+            <h2>Contact <span>Me</span> </h2>
+          </div>
           <form action="">
             <div class="form-container">
               <h3>Name:</h3>
@@ -168,10 +179,6 @@
               <input type="button" name="submit" value="submit" onclick="sendMessage()" />
             </div>
           </form>
-
-          <div class="text" id="04">
-            <h2>If you have something in your mind that you want to talk about. Feel free to Contact Me.</h2>
-          </div>
         </footer>
       </section>
     </div>
