--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <h1>Mailar.</h1>
           </a>
           <ul>
-            <li><a href="">Home</a></li>
+            <li><a href="" class="active">Home</a></li>
             <li><a href="#01">About</a></li>
             <li><a href="#03">Work</a></li>
             <li><a href="#04">Contact</a></li>
@@ -31,13 +31,13 @@
         <main class="home">
           <div class="text">
             <h1>
-              Hey, I am a <span>Front-end</span> <br />
-              <span>developer</span> and <span> designer</span>
+              Hey, I <span>build</span> interactive <span>web applications</span> that
+              runs across <br> on different <span>platforms</span> & <span> devices</span>
             </h1>
 
             <div class="btn-container">
-              <a href="assets/pdf/leo_koivunen_cv.pdf" class="material-bubble" target="_blank" rel="noreferrer"> Resume </a>
-              <a href="#03" class="material-bubble" rel="noreferrer"> Work </a>
+              <a href="#03" class="important" rel="noreferrer"> Work </a>
+              <a href="assets/pdf/leo_koivunen_cv.pdf" target="_blank" rel="noreferrer"> Resume </a>
             </div>
           </div>
         </main>
@@ -169,13 +169,13 @@
           <form action="">
             <div class="form-container">
               <h3>Name:</h3>
-              <input type="text" class="name" name="firstname" placeholder="Please enter your name" required />
+              <input type="text" class="name" name="firstname" required />
               <h3>Email:</h3>
-              <input type="text" class="email" name="email" placeholder="firstname@example.com" required />
+              <input type="text" class="email" name="email"  required />
               <h3>Subject:</h3>
-              <input type="text" class="subject" name="subject" placeholder="feedback, job offer, any." required />
+              <input type="text" class="subject" name="subject" required />
               <h3>Message:</h3>
-              <textarea type="text" class="message" name="message" placeholder="Hello world!" required></textarea><br />
+              <textarea type="text" class="message" name="message" required></textarea><br />
               <input type="button" name="submit" value="submit" onclick="sendMessage()" />
             </div>
           </form>
