--- a/index.html
+++ b/index.html
@@ -18,11 +18,14 @@
             <h1>Mailar.</h1>
           </a>
           <ul>
-            <li><a href="" class="active">Home</a></li>
-            <li><a href="#01">About</a></li>
-            <li><a href="#03">Work</a></li>
-            <li><a href="#04">Contact</a></li>
+            <li>
+              <a href="" class="btn active">Home</a>
+              <a href="#01" class="btn">About</a>
+              <a href="#03" class="btn">Work</a>
+              <a href="#04" class="btn">Contact</a>
+            </li>
           </ul>
+
           <!-- <div class="mobile-icon">
             <img src="assets/svg/menu.svg" alt="menu" width="50" />
           </div> -->
@@ -182,6 +185,7 @@
         </footer>
       </section>
     </div>
-    <script src="assets/js/ver987.js"></script>
+    <script src="assets/js/post.js"></script>
+    <script src="assets/js/active.js"></script>
   </body>
 </html>
