Swich favicon and delete trash

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Mailar</title>
     <link rel="stylesheet" href="assets/css/index.css" />
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" />
-    <link rel="shortcut icon" type="image/jpg" href="assets/img/favic.png" />
+    <link rel="shortcut icon" type="image/png" href="assets/img/favicon.png" />
   </head>
   <body>
     <div class="container">
@@ -40,10 +40,16 @@
 
             <div class="btn-container">
               <a href="#03" class="important" rel="noreferrer"> Work </a>
-              <a href="assets/pdf/leo_koivunen_cv.pdf" target="_blank" rel="noreferrer"> Resume </a>
+              <a href="assets/pdf/cv.pdf" target="_blank" rel="noreferrer"> Resume </a>
+            </div>
+
+            <div class="pattern-container">
+              <div class="pattern"></div>
             </div>
           </div>
         </main>
+  
+
       </header>
 
       <section>
@@ -185,6 +191,7 @@
         </footer>
       </section>
     </div>
+
     <script src="assets/js/post.js"></script>
     <script src="assets/js/active.js"></script>
   </body>
