add links to end

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
         <main class="home">
           <div class="text">
             <h1>
-              Hey, I <span>build</span> interactive <span>web applications</span> that
-              runs across <br> on different <span>platforms</span> & <span> devices</span>
+              Hey, I <span>build</span> interactive <span>web applications</span> that runs across <br />
+              on different <span>platforms</span> & <span> devices</span>
             </h1>
 
             <div class="btn-container">
@@ -48,8 +48,6 @@
             </div>
           </div>
         </main>
-  
-
       </header>
 
       <section>
@@ -58,6 +56,9 @@
             <h2>About <span>Me</span></h2>
             <p>
               I am a Front-end web developer who is currently studying software development in a vocational school.
+              <br />
+              <br />
+              I offer interactive and full scalable websites that are fast & simple and operates well.
               <br />
               <br />
               My passion is to create web applications and turn them into something great that looks nice and simple.
@@ -173,19 +174,31 @@
 
         <footer class="contact">
           <div class="text" id="04">
-            <h2>Contact <span>Me</span> </h2>
+            <h2>Contact <span>Me</span></h2>
           </div>
           <form action="">
             <div class="form-container">
               <h3>Name:</h3>
               <input type="text" class="name" name="firstname" required />
               <h3>Email:</h3>
-              <input type="text" class="email" name="email"  required />
+              <input type="text" class="email" name="email" required />
               <h3>Subject:</h3>
               <input type="text" class="subject" name="subject" required />
               <h3>Message:</h3>
               <textarea type="text" class="message" name="message" required></textarea><br />
               <input type="button" name="submit" value="submit" onclick="sendMessage()" />
+            </div>
+
+            <div class="links">
+              <a href="https://www.linkedin.com/in/leokoivunen/" target="_blank">
+                <i class="fab fa-linkedin-in"></i>
+              </a>
+              <a href="https://github.com/devmailar" target="_blank">
+                <i class="fab fa-github"></i>
+              </a>
+              <a href="https://www.youtube.com/c/MailarYT/videos" target="_blank">
+                <i class="fab fa-youtube"></i>
+              </a>
             </div>
           </form>
         </footer>
