--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
           <div class="text" id="04">
             <h2>Contact <span>Me</span></h2>
           </div>
-          <form action="">
+          <form>
             <div class="form-container">
               <h3>Name:</h3>
               <input type="text" class="name" name="firstname" required />
@@ -187,6 +187,7 @@
               <h3>Message:</h3>
               <textarea type="text" class="message" name="message" required></textarea><br />
               <input type="button" name="submit" value="submit" onclick="sendMessage()" />
+              <script src="assets/js/post.js"></script>
             </div>
 
             <div class="links">
@@ -204,8 +205,6 @@
         </footer>
       </section>
     </div>
-
-    <script src="assets/js/post.js"></script>
     <script src="assets/js/active.js"></script>
   </body>
 </html>
