--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
               <input type="button" name="submit" value="submit" onclick="sendMessage()" />
               <script>
                 function sendMessage() {
-                  console.log("sending");
+                  console.log("sending2");
                   const request = new XMLHttpRequest();
                   request.open(
                     "POST",
