--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="assets/css/index.css" />
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" />
     <link rel="shortcut icon" type="image/png" href="assets/img/favicon.png" />
-    <script src="assets/js/post.js"></script>
   </head>
   <body>
     <div class="container">
@@ -177,7 +176,7 @@
           <div class="text" id="04">
             <h2>Contact <span>Me</span></h2>
           </div>
-          <form>
+          <form action="">
             <div class="form-container">
               <h3>Name:</h3>
               <input type="text" class="name" name="firstname" required />
@@ -205,6 +204,8 @@
         </footer>
       </section>
     </div>
+
+    <script src="assets/js/post.js"></script>
     <script src="assets/js/active.js"></script>
   </body>
 </html>
