--- a/index.html
+++ b/index.html
@@ -176,17 +176,21 @@
           <div class="text" id="04">
             <h2>Contact <span>Me</span></h2>
           </div>
-          <form action="">
+          <form action="POST" data-netlify="true">
             <div class="form-container">
-              <h3>Name:</h3>
-              <input type="text" class="name" name="firstname" required />
-              <h3>Email:</h3>
-              <input type="text" class="email" name="email" required />
-              <h3>Subject:</h3>
-              <input type="text" class="subject" name="subject" required />
-              <h3>Message:</h3>
-              <textarea type="text" class="message" name="message" required></textarea><br />
-              <input type="button" name="submit" value="submit" onclick="sendMessage()" />
+              <div class="field">
+                <label for="field-1" class="floating-label">Name</label>
+                <input type="text" required />
+              </div>
+              <div class="field">
+                <label for="field-2" class="floating-label">Email</label>
+                <input type="text" required />
+              </div>
+              <div class="field">
+                <label for="field-3" class="floating-label">Message</label>
+                <textarea type="text" required></textarea>
+              </div>
+              <input type="button" name="submit" value="submit" />
             </div>
 
             <div class="links">
@@ -204,8 +208,6 @@
         </footer>
       </section>
     </div>
-
-    <script src="assets/js/post.js"></script>
     <script src="assets/js/active.js"></script>
   </body>
 </html>
