--- a/index.html
+++ b/index.html
@@ -190,6 +190,9 @@
                 <label for="field-3" class="floating-label">Message</label>
                 <textarea type="text" required></textarea>
               </div>
+              <div class="field">
+                <div data-netlify-recaptcha="true"></div>
+              </div>
               <input type="button" name="submit" value="submit" />
             </div>
 
