Update style for recaptcha

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
               <div class="field" id="netlify">
                 <div data-netlify-recaptcha="true"></div>
               </div>
-              <input type="button" name="submit" value="submit" />
+              <input type="submit" value="Submit" />
             </div>
 
             <div class="links">
