Add new project to portfolio

--- a/index.html
+++ b/index.html
@@ -79,6 +79,28 @@
 
           <div class="card">
             <div class="info">
+              <h1>Airbnb React</h1>
+              <p>Airbnb react is a simple project that provides cards and other components. It main idea is to tell people about activies outside.</p>
+
+              <div class="technologies-container">
+                <i class="fab fa-html5"></i>
+                <i class="fab fa-js"></i>
+                <i class="fab fa-react"></i>
+                <i class="fab fa-sass"></i>
+              </div>
+
+              <div class="btn-container">
+                <a href="https://github.com/devmailar/AirBnb-react" target="_blank" rel="noopener noreferrer">Code</a>
+                <a href="https://airbnb-reactjs.netlify.app/" target="_blank" rel="noopener noreferrer">Preview</a>
+              </div>
+            </div>
+            <div class="img">
+              <img src="assets/img/airbnb-image.png" alt="project-picture" width="" />
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="info">
               <h1>Portfolio</h1>
               <p>
                 Portfolio - this is my current portfolio website for showing my top projects and information about me. It is made using HTML/SCSS/JS.
