--- a/index.html
+++ b/index.html
@@ -55,19 +55,18 @@
           <div class="text" id="01">
             <h2>About <span>Me</span></h2>
             <p>
-              I am a Front-end web developer who is currently studying software development in a vocational school.
+              Greeting, I am a Front-end Developer with a positive attitude, I am studying software development in a vocational school. I create
+              interactive and full scalable web applications that are fast and simple and just operates well.
               <br />
               <br />
-              I offer interactive and full scalable websites that are fast & simple and operates well.
-              <br />
-              <br />
-              My passion is to create web applications and turn them into something great that looks nice and simple.
-              <br />
+              I use these skills listed below on daily basis for front-end development. <br />
+              <i class="fab fa-html5"></i>
+              <i class="fab fa-css3-alt"></i>
+              <i class="fab fa-sass"></i>
 
               <i class="fab fa-js"></i>
               <i class="fab fa-react"></i>
               <i class="fab fa-node-js"></i>
-              <i class="fab fa-sass"></i>
             </p>
           </div>
         </aside>
