Update about texts

--- a/index.html
+++ b/index.html
@@ -53,21 +53,22 @@
       <section>
         <aside class="about">
           <div class="text" id="01">
-            <h2>About <span>Me</span></h2>
+            <h3>About <span>Me</span></h3>
             <p>
-              Greeting, I am a Front-end Developer with a positive attitude, I am studying software development in a vocational school. I create
+              I am a Front-end Developer with a positive attitude, I am studying software development in a vocational school. My passion is to create
               interactive and full scalable web applications that are fast and simple and just operates well.
               <br />
               <br />
-              I use these skills listed below on daily basis for front-end development. <br />
+              I use these skills listed below on daily basis. <br />
+            </p>
+
+            <div class="icon-container">
               <i class="fab fa-html5"></i>
               <i class="fab fa-css3-alt"></i>
               <i class="fab fa-sass"></i>
-
-              <i class="fab fa-js"></i>
               <i class="fab fa-react"></i>
               <i class="fab fa-node-js"></i>
-            </p>
+            </div>
           </div>
         </aside>
 
